<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smd.clientapplication.smd.rootActivity.fragments.ConsumptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="@string/hello_blank_fragment" />-->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2"
        >
        <TableRow>
           <TextView android:text="@string/consumption_in_city" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow android:background="@color/table_backgroundColor"
                    android:layout_margin="2dp"
            android:layout_width="match_parent">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nominal"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:text="9 л/100 км"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>
        <TableRow android:background="@color/table_backgroundColor"
            android:layout_margin="2dp"
            android:layout_width="match_parent">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fact_consumption"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:text="9 л/100 км"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/consumption_on_highway" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow android:background="@color/table_backgroundColor"
            android:layout_margin="2dp"
            android:layout_width="match_parent">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nominal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:text="9 л/100 км"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>
        <TableRow android:background="@color/table_backgroundColor"
            android:layout_margin="2dp"
            android:layout_width="match_parent">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fact_consumption"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:text="9 л/100 км"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</FrameLayout>
